force-app/main/default/objects/Salary_Details__c/Salary_Details__c.object-meta.xml
<CustomObject>
    <label>Salary Details</label>
    <nameField>
        <displayFormat>SAL-{000000}</displayFormat>
        <label>Salary ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Salary Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>