force-app/main/default/objects/Salary_Details__c/fields/Bank_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Bank_Account_Number__c</fullName>
    <label>Bank Account Number</label>
    <length>25</length>
    <required>true</required>
    <type>Text</type>
</CustomField>