force-app/main/default/objects/Salary_Details__c/fields/Bank_Details__c.field-meta.xml
<CustomField>
    <fullName>Bank_Details__c</fullName>
    <label>Bank Details</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>