force-app/main/default/objects/Salary_Details__c/fields/Credited_to_emp__c.field-meta.xml
<CustomField>
    <fullName>Credited_to_emp__c</fullName>
    <label>Credited to emp</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>Salary Details</relationshipLabel>
    <relationshipName>Salary_Details</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>