force-app/main/default/objects/Salary_Details__c/fields/PF_deduction__c.field-meta.xml
<CustomField>
    <fullName>PF_deduction__c</fullName>
    <label>PF deduction</label>
    <precision>12</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>