force-app/main/default/objects/Salary_Details__c/fields/Total_Earnings__c.field-meta.xml
<CustomField>
    <fullName>Total_Earnings__c</fullName>
    <formula>Basic__c  +  HRA__c  +  Special_Allowance__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Earnings</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>