force-app/main/default/objects/Salary_Details__c/validationRules/Bank_Account_Details_cannot_be_null.validationRule-meta.xml
<ValidationRule>
    <fullName>Bank_Account_Details_cannot_be_null</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK( Bank_Details__c )</errorConditionFormula>
    <errorMessage>Bank Details cannot be NULL</errorMessage>
</ValidationRule>