force-app/main/default/objects/Salary_Details__c/validationRules/Bank_Account_Number_cannot_be_changed.validationRule-meta.xml
<ValidationRule>
    <fullName>Bank_Account_Number_cannot_be_changed</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISBLANK( Bank_Account_Number__c ) , ISCHANGED( Bank_Account_Number__c ) )</errorConditionFormula>
    <errorMessage>Bank Account number once set cannot be changed</errorMessage>
</ValidationRule>