force-app/main/default/objects/Salary_Details__c/validationRules/salary_cant_be_processed_for_inactive_em.validationRule-meta.xml
<ValidationRule>
    <fullName>salary_cant_be_processed_for_inactive_em</fullName>
    <active>true</active>
    <errorConditionFormula>IF( Credited_to_emp__r.Is_Active__c =false  &amp;&amp;  Credited_to_emp__r.Is_on_Notice_Period__c =false,true,false)</errorConditionFormula>
    <errorMessage>Salary cannot be processed for inactive employee</errorMessage>
</ValidationRule>